feat: 添加 SLSMetrics 独立监控服务
新增 SLSMetrics 监控服务，用于对 YARN Fake NM 压测过程进行可视化监控。

功能特性：
- 独立进程运行，不依赖 Fake NM 或 SLSRunner
- 通过 MetricsServer HTTP API 和 YARN RM RPC 周期性采集指标
- SQLite 持久化存储，支持自动过期清理（默认保留 7 天）
- JFreeChart 生成 4 种 PNG 趋势图（容器/资源/应用/心跳）
- 内存环形缓冲区暂存最近 3600 个快照供图表使用
- 9 个 yarn.metrics.* 配置项，全部可定制

新增文件：
- 10 个 Java 源文件（POJO/存储/采集/图表/入口）
- 3 个测试类，18 个测试用例
- design doc + 实施计划
- start-metrics.bat / start-metrics.sh 启动脚本
- README 更新

代码审查修复：
- cleanupExpiredData() 添加 synchronized 防竞态
- 计数器重置保护（Math.max(0, diff) 防负速率）
- 构造器异常路径资源泄漏保护
- HTTP 采集失败跳过当前周期
- 启动脚本类路径修正